# django-sage-slug

./: pyproject.toml
sage_slug/: apps.py  exc.py  fields.py  models.py
sage_slug/middleware/: slug_swap.py
sage_slug/settings/: checks.py  conf.py
